Update hair purchase status in notes
Added a note indicating that all hair has been bought except for gems, clarifying the current progress.

--- a/fashion-stylist/2025-008-021.md
+++ b/fashion-stylist/2025-008-021.md
@@ -1,2 +1,3 @@
 I am working on buying all of the hair.
 I am working on buying all of the hair (for evening).
+I bought all of the hair, except gems.
