Add note about selecting only the rarest hair
Appended a statement emphasizing that only the rarest and best hair is considered good enough for selection.

--- a/fashion-stylist/2025-008-021.md
+++ b/fashion-stylist/2025-008-021.md
@@ -1,3 +1,5 @@
 I am working on buying all of the hair.
 I am working on buying all of the hair (for evening).
 I bought all of the hair, except gems.
+
+Only the rarest best is good enough.
